# ssot-mcp

./: .gitignore  APPLICATION_SPEC.md  Containerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/ssot_mcp/: __init__.py
src/ssot_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ssot_mcp/cli/: __init__.py  main.py
src/ssot_mcp/core/: __init__.py  store.py
src/ssot_mcp/embeddings/: __init__.py  semantic.py  semantic_queue.py
src/ssot_mcp/git/: __init__.py  git_ops.py
src/ssot_mcp/github/: __init__.py  credentials.py  github_org.py
src/ssot_mcp/mcp/: __init__.py  server.py
src/ssot_mcp/runtime/: __init__.py  __main__.py  launcher.py
src/ssot_mcp/services/: __init__.py  repos.py
src/ssot_mcp/ui/: __init__.py  app.py  authn.py  config.py  deps.py  main.py  org_import_job.py
src/ssot_mcp/ui/routers/: __init__.py  auth_routes.py  help_routes.py  repos_routes.py  settings_routes.py
src/ssot_mcp/ui/static/: style.css
src/ssot_mcp/ui/templates/: base.html  cursor_mcp.html  github_settings.html  login.html  org_import.html  org_import_progress.html  repo_add.html  repo_edit.html  repos_list.html
tests/: conftest.py  test_cli.py  test_git_ops.py  test_github_credentials.py  test_github_org.py  test_org_import_job.py  test_repos.py  test_semantic.py  test_semantic_queue.py  test_semantic_ui_row.py  test_server_smoke.py  test_store.py  test_ui_app.py  test_ui_authn.py
