[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssot-mcp"
version = "0.1.0"
description = "Single Source of Truth MCP — mirror and index git repos for Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
]

[project.optional-dependencies]
semantic = [
    "lancedb>=0.21.0",
    "fastembed>=0.5.0",
]
test = [
    "pytest>=8.0",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
]

[project.scripts]
ssot-mcp = "ssot_mcp.cli.main:main"
ssot-mcp-ui = "ssot_mcp.ui.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ssot_mcp.ui" = [
    "templates/*.html",
    "static/*.css",
    "static/*.svg",
    "static/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
